fixed whitespace on homepage

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -62,7 +62,13 @@
 
 
 @media screen and (max-width: 400px) {
+    .row, .col {
+        width: 400px
+    }
+
+
     .intro-h-con {
+       
         margin-bottom: 20px;
     }
 
